--- a/WebContent/html/admin.html
+++ b/WebContent/html/admin.html
@@ -9,13 +9,13 @@
 <div id="wrapper" class="width_full_size" style="height: 100%">
 <div id="header" class="width_full_size position_fix" style="height: 100px" >
 	<div class="logo_box width_full_size text_center">
-		<img src="../images/index/index_logo.png">
+		<a href="../index.html"><img src="../images/index/index_logo.png"></a>
 	</div>
 	<ul class="gnb width_full_size text_center bg_color_darkgray" style="height: 40px">
-		<li><a href="html/join.html">회원가입</a></li>
-		<li><a href="html/login.html">로그인</a><li>
-		<li><a href="html/board.html">게시판</a><li>
-		<li><a href="html/admin.html">관리자</a><li>
+		<li><a href="join.html">회원가입</a></li>
+		<li><a href="login.html">로그인</a><li>
+		<li><a href="board.html">게시판</a><li>
+		<li><a href="admin.html">관리자</a><li>
 	</ul>
 	
 </div>
@@ -127,6 +127,5 @@
 	</dl>
 	<address>&copy; <strong><a href="http://www.navercorp.com/" target="_blank">NAVER Corp.</a></strong></address>
 	</div>
-</div>
 </body>
 </html>
