--- a/WebContent/html/board.html
+++ b/WebContent/html/board.html
@@ -2,9 +2,43 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Index</title>
+<link rel="stylesheet" href="../css/hanbit.css" />
 </head>
 <body>
+<div id="wrapper" class="width_full_size" style="height: 100%">
+<div id="header" class="width_full_size position_fix" style="height: 100px" >
+	<div class="logo_box width_full_size text_center">
+		<a href="../index.html"><img src="../images/index/index_logo.png"></a>
+	</div>
+	<ul class="gnb width_full_size text_center bg_color_darkgray" style="height: 40px">
+		<li><a href="join.html">회원가입</a></li>
+		<li><a href="login.html">로그인</a><li>
+		<li><a href="board.html">게시판</a><li>
+		<li><a href="admin.html">관리자</a><li>
+	</ul>
+	
+</div>
+<div style="height: 100px"></div>
+<div id="container" class="width_full_size" style="height: 600px">
 
+</div>
+<div id="footer" class="width_full_size" style="height: 80px; border-top: 2px solid #5a5a5a;">
+	<dl class="notice" style="margin-left: 40px">
+		<dt><a href="/NOTICE" class="h_notice">공지사항</a></dt>
+	</dl>
+	<dl class="policy">
+		<dd class="f"><a href="http://www.navercorp.com/" target="_blank" id="plc.intronhn">회사소개</a></dd>
+		<dd><a href="http://mktg.naver.com/" id="plc.adinfo">광고</a></dd>
+		<dd><a href="https://submit.naver.com/" id="plc.search">마이비즈니스</a></dd>
+		<dd><a href="https://www.navercorp.com/ko/company/proposalGuide.nhn" target="_blank" id="plc.contact">제휴제안</a></dd>
+		<dd><a href="rules/service.html" id="plc.service">이용약관</a></dd>
+		<dd><a href="rules/privacy.html" id="plc.privacy"><strong>개인정보처리방침</strong></a></dd>
+		<dd><a href="rules/youthpolicy.html" id="plc.youth">청소년보호정책</a></dd>
+		<dd><a href="https://help.naver.com/" id="plc.helpcenter">네이버 고객센터</a></dd>
+	</dl>
+	<address>&copy; <strong><a href="http://www.navercorp.com/" target="_blank">NAVER Corp.</a></strong></address>
+	</div>
+	</div>
 </body>
 </html>
