--- a/WebContent/html/reservation.html
+++ b/WebContent/html/reservation.html
@@ -2,45 +2,42 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>예매내역 헤더</title>
+<title>Index</title>
+<link rel="stylesheet" href="../css/hanbit.css" />
 </head>
 <body>
-<h3>홈으로 가기</h3> 
+<div id="wrapper" class="width_full_size" style="height: 100%">
+<div id="header" class="width_full_size position_fix" style="height: 100px" >
+	<div class="logo_box width_full_size text_center">
+		<a href="../index.html"><img src="../images/index/index_logo.png"></a>
+	</div>
+	<ul class="gnb width_full_size text_center bg_color_darkgray" style="height: 40px">
+		<li><a href="join.html">회원가입</a></li>
+		<li><a href="login.html">로그인</a><li>
+		<li><a href="board.html">게시판</a><li>
+		<li><a href="admin.html">관리자</a><li>
+	</ul>
+</div>
+<div style="height: 100px"></div>
+<div id="container" class="width_full_size" style="height: 600px">
 <h1>예매내역</h1>
-<img src="../images/Koala.jpg" width="100px" height="100px"/>
-<a href=""></a>
-<ul>
-	<li>Coffee</li>
-	<li>Tea</li>
-	<li>Coke</li>
-</ul>
-<div></div>
-
-<!-- table>tr*3>td*5 -->
-<table>
-	<tr>
-		<th>ID</th>
-		<th>이름</th>
-		<th>나이</th>
-		
-	</tr>
-	<tr>
-		<td>hong</td>
-		<td>홍길동</td>
-		<td>20</td>
-		
-	</tr>
-	<tr>
-		<td>kim</td>
-		<td>김유신</td>
-		<td>21</td>
-		
-	</tr>
-	<tr>
-		<td>yoo</td>
-		<td>유관순</td>
-		<td>18</td>
-	</tr>
-</table>
+</div>
+<div id="footer" class="width_full_size" style="height: 80px; border-top: 2px solid #5a5a5a;">
+	<dl class="notice" style="margin-left: 40px">
+		<dt><a href="/NOTICE" class="h_notice">공지사항</a></dt>
+	</dl>
+	<dl class="policy">
+		<dd class="f"><a href="http://www.navercorp.com/" target="_blank" id="plc.intronhn">회사소개</a></dd>
+		<dd><a href="http://mktg.naver.com/" id="plc.adinfo">광고</a></dd>
+		<dd><a href="https://submit.naver.com/" id="plc.search">마이비즈니스</a></dd>
+		<dd><a href="https://www.navercorp.com/ko/company/proposalGuide.nhn" target="_blank" id="plc.contact">제휴제안</a></dd>
+		<dd><a href="rules/service.html" id="plc.service">이용약관</a></dd>
+		<dd><a href="rules/privacy.html" id="plc.privacy"><strong>개인정보처리방침</strong></a></dd>
+		<dd><a href="rules/youthpolicy.html" id="plc.youth">청소년보호정책</a></dd>
+		<dd><a href="https://help.naver.com/" id="plc.helpcenter">네이버 고객센터</a></dd>
+	</dl>
+	<address>&copy; <strong><a href="http://www.navercorp.com/" target="_blank">NAVER Corp.</a></strong></address>
+	</div>
+</div>
 </body>
 </html>
