--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,7 +9,7 @@
 <div id="wrapper" class="width_full_size" style="height: 100%">
 <div id="header" class="width_full_size position_fix" style="height: 100px" >
 	<div class="logo_box width_full_size text_center">
-		<img src="images/index/index_logo.png">
+		<a href="../index.html"><img src="images/index/index_logo.png"></a>
 	</div>
 	<ul class="gnb width_full_size text_center bg_color_darkgray" style="height: 40px">
 		<li><a href="html/join.html">회원가입</a></li>
